fix Tool in Tool merging problem

--- a/test/appTest.html
+++ b/test/appTest.html
@@ -17,7 +17,7 @@
 			webresource: 'min'
 		}
 	});
-	seajs.use('webresource/test');
+	seajs.use('webresource/app/test');
   </script>
 </body>
 </html>
