--- a/test/test2.html
+++ b/test/test2.html
@@ -17,7 +17,7 @@
 			webresource: 'min'
 		}
 	});
-	seajs.use('webresource/test');
+	seajs.use('webresource/test2');
   </script>
 </body>
 </html>
