--- a/test/src/templateTest/view.html
+++ b/test/src/templateTest/view.html
@@ -1,5 +1,6 @@
+<h1>Hello world</h1>  
 <div class="view">
-  <h1>{{title}}</h1>
+  <h2>{{title}}</h2>
   <div class="body">
     {{> customHelper}}
   </div>
